# packager

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  build-container.sh  build.rs  deps.sh  dev.sh  init-postgres.sh  migrate.sh  patch_issue_2599.patch  postgres-dump.sh  postgres-restore.sh  psql.sh  rebuild-schema-data.sh  run-all-features.sh  run-in-k8s.sh  run.sh  start-jaeger.sh  start-postgres.sh  start-prometheus.sh  start-tokio-console.sh  taplo.toml  todo  update-k8s.sh
.cargo/: config.toml
.sqlx/: query-003e3585cc798a04c3bad7e74e16c380f42202c5cd9b09d9a3e05a749a55a910.json  query-01029445dc4fa62b17d7c4fa5e3e5e55e62175261c7857845088760ce7a8ef7d.json  query-02f14cbcde3a941a14ef070045046477d7d261c0a53e782705c195053246154b.json  query-05ce9a63db1be8db10cc8119ede2d19f6abb0ce03a3c678d17a653cc43c67c3c.json  query-083f9f5bde8f4fe7fd9c88114f437c408eb84cbc06bd68bf2a17a6d6faa065ee.json  query-0bcd2fcd725ba805a640c4066f5012a36c9f5a78dda51dc0643ebe8ea6028673.json  query-0c1f320c3cd7b9a777c558836307309bc5a881d2a2fc5364d9b666f6b53a8778.json  query-14e277298aa5ae032943a0d19e41d5fd444520c6555b2a55ba43c9547fc3b450.json  query-156f43e93ad5c9d51c9e4c226aceed32d94ee9404abd60bd27b1f0ec0a88b75c.json  query-15dd889dbe45883f53d5154c59a3b12f79712693ee1ee20e9f7ae121eb072118.json  query-1773738922e7071dacf64c482fe09ee573b3a1ccacf73b649684c5cf68878194.json  query-17dfc8ae16d077ed71976012315376e1df403cb81ef173cb8811a5481186db7a.json  query-182db3fb919cf345f2b05f1c1325cc939b54336c66890892859c2c0f97930c63.json  (+139 more)
api/: .gitignore  Cargo.toml  spec.yml
api/src/: db.rs  lib.rs  main.rs  packagelist.rs  router.rs  trip.rs
database/: Cargo.toml
database/src/: error.rs  lib.rs  macros.rs  pool.rs  postgres.rs  telemetry.rs  types.rs
framework/: Cargo.toml
framework/src/: lib.rs  models.rs
framework/src/components/: infobox.rs  mod.rs
framework/src/elements/: mod.rs
python_flask/: .gitignore  (+7 more)
rust/: .gitignore  Cargo.toml  Dockerfile  build-container.sh  prepare-test-instance.sh  prometheus.yml  query.sql  rebuild-schema-data.sh  run-test-instance.sh  sqlx-data.json  start-jaeger.sh  start-prometheus.sh
rust/.sqlx/: query-0d341935886c28710302aec9d5d085b535ad54949b87793e98cbf3bd5d828a41.json  query-0e8a12e168d8ff41005b2b5a1356ef5dc39339291572005e2a9278fb28113a2b.json  query-12167f7d6f8b1bfc5f37c214b089a5196039e6845598b8b22852b7665bcd5c0c.json  query-16c1a8c70c0778528502dcf1067f5b23d8fc8aaa6d61385b79bac4224a78d703.json  query-1899fd9182e8791104be2c369298b3f1731b34404ec5ac3d1312a8d84dbf5c7d.json  query-1994305e1521fe1f5f927ad28e21c9cab8a25598b19e1c9038dae9092fe18f1f.json  query-1eb9a8fdb9412753592f48a9267c97042aeaf6691546efae894e5d34ee92f34b.json  query-1f08e9bebf51aab9cabff2a5c79211233a686e9ef9f96ea5c036fbba8f6b06d5.json  query-259757f1bb08f0c366371202c75b8555b878290b8a5a68564ec3e8b3d8e7ed01.json  query-2793ec31c3345d77a824314bffa8a53cee248ac310fa620c272af1514f9ae951.json  query-31bd853345496b0680c337f7b9e3c5e5ee04a315af737507001d9a128e981c52.json  query-3356a9ab2f217e3daf101644667c9d84f1547e0c72ab779e2f3aebb628a78034.json  query-343addb4024192688590b6b1228b9fdc554e2bbcc7e7300d8ca04cc4f23087d0.json  query-41f96460749516db0bb510c01cf8b5ea4f49773f2de3c3e10e718a09d6816cb0.json  query-452cb08b3b46bda9cb62d390d9f518d97626270a26465e55793b0a4b05432e50.json  query-48c563fdbc8ca0dbe14726eda25a18780c6c416eda63b246daa75c5ff318331d.json  query-4e24e535cc7c0dc0de572be4295ec187d7ad3742cb85371550bdaed2b780d7f5.json  query-5fd2b986fcaafe93e816f9ed665b6319d120a3987dc5adca1e3c8634203f7533.json  query-629f34ef9bd0afa39123758cc182468edb7475f6c08cb4b5febb3ce931f2b547.json  query-67199202f732164b183ac4813e4a2e8fef843f0c95affadfa66091e4b97756f0.json  query-68f936e138283635c5e7bde3313f036aae4167143200ea20fb89e1e99ada9ad1.json  query-6973cceeb5499216475136b320b25e1355974e1213829d931abdd6b7a1448a87.json  query-6df16058d577c24a2aaaae71b2c3fd94ddf24e1ced343f3ea20872f0692a9ada.json  query-6e8fbd5a7269c6a2021b688b58f74f8235554a414f77af5c2524d51920f0e33c.json  query-6fd3243228d59a7ac2266f0c181a78e7e7a312e101bdd9846123ee4de7c4751a.json  query-82395724cd85d8b57ce50a64f49386435fbebc83f18db53ab8650b29414e40fb.json  query-86eb9fd598fbbb50b32ea7eae3151bfd8a83639c8b70301f5d5aeef19ae9462c.json  query-918fc9cf50097d4210b212255ef49335ebedbe81002ce9a418b4dab4fbb29aa3.json  query-92ca05be21a4c05bf26f8a1655bbb8d9f1ece322abff5395ecacde3f6e28fdf7.json  query-999fe09a6a095ac0ee7b3e3c38a6f2008641e03f9344f31bf9f8eb16a47403da.json  query-a417bf136b8f79339a21fda10518c781d0d2bfc8c3fc99353d1956dfad9f5ac8.json  query-a5bedc046d5a4fd900903675794e7c3d8202d3876a26505cd26be7ceeb10d06d.json  query-a5cdb8a6d5850326815efd460c0b42dda02a4ea32713ec89beceb38cd24321d5.json  query-a81bcbeb11260e3b4363e19c26b71b489e326b08bfacb6e11b4c4fc068dc7806.json  query-b36287d1b8c7905fb5fe6f8e9c73ca6f63b79252471ce4621d8692771e6fd3cc.json  query-baea696b94b2f73ec46c645ed4f7ed355fab4bb37a56b9061bc37f3f053703cb.json  query-bc01ec2128b21bbdfaab9fc42782a4b30ea2c88d120b4bf2c56cdf0f8d4c5d9d.json  query-c34c9c567a98937e043424db17246ddf23dbc8b618dca6c637f2d71d03841920.json  query-c3da65d50b22628d03eeaaf8c5e4b1602b82fb350668102d496683374556d830.json  query-cc1ad49669cff7f89975abfab3d0a8caef2e3978c826e1877db91c05a7f9d00d.json  (+11 more)
rust/js/: app.js
rust/migrations/: 20230519222555_initial.sql  20230520131340_1.sql  20230523190551_product.sql  20230614163747_add_ready.sql  20230820094036_add_user_to_inventory.sql  20230820193229_add_user_to_trips.sql  20230820194457_add_user_to_trips2.sql
rust/src/: auth.rs  cmd.rs  error.rs  html.rs  htmx.rs  lib.rs  main.rs  models.rs  out  sqlite.rs  telemetry.rs
rust/src/components/: home.rs  inventory.rs  mod.rs  trip.rs  triplist.rs
rust/src/components/trip/: mod.rs  packagelist.rs  types.rs
rust/src/models/: error.rs  inventory.rs  mod.rs  trips.rs  user.rs
rust/src/routing/: mod.rs  routes.rs
rust/src/telemetry/: metrics.rs
rust/src/telemetry/tracing/: mod.rs
rust/src/view/: error.rs  home.rs  inventory.rs  mod.rs  root.rs
rust/src/view/trip/: mod.rs  packagelist.rs  types.rs
rust/test/tests/: main.rs  tmp
(+155 files in other folders)
