[package]
name = "packager"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[[bin]]
name = "packager"
path = "src/main.rs"

[features]
otel = [
 "dep:opentelemetry",
 "dep:opentelemetry_sdk",
 "dep:tracing-opentelemetry",
 "dep:opentelemetry-otlp",
 "dep:tonic",
 "tokio/tracing"
]
prometheus = ["dep:axum-prometheus"]
tokio-console = ["dep:console-subscriber"]

default = ["otel", "prometheus", "tokio-console"]

[profile.dev]
opt-level = 0
lto = "off"

[dependencies.paste]
version = "*"

[dependencies.rust_decimal]
version = "*"
default-features = false

[dependencies.async-trait]
version = "*"

[dependencies.axum]
version = "*"
features = ["macros"]

[dependencies.axum-prometheus]
version = "*"
optional = true

[dependencies.base64]
version = "*"

[dependencies.clap]
version = "*"
features = ["derive"]

[dependencies.console-subscriber]
version = "*"
optional = true

[dependencies.futures]
version = "*"

[dependencies.http]
version = "*"

[dependencies.hyper]
version = "*"
features = ["full"]

[dependencies.log]
version = "*"

[dependencies.maud]
version = "*"
features = [
  "axum",
]

[dependencies.metrics]
version = "*"

[dependencies.opentelemetry]
version = "*"
optional = true

[dependencies.opentelemetry-otlp]
version = "*"
features = ["grpc-tonic"]
optional = true

[dependencies.opentelemetry_sdk]
version = "*"
features = ["rt-tokio"]
optional = true

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.serde_variant]
version = "*"

[dependencies.sha2]
version = "*"

[dependencies.sqlx]
version = "*"
#path = "./vendor/sqlx"
features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "time",
  "migrate",
  "uuid",
]

[dependencies.time]
version = "*"
features = ["serde"]

[dependencies.tokio]
version = "*"
features = ["macros", "rt-multi-thread"]

[dependencies.tonic]
version = "*"
optional = true

[dependencies.tower]
version = "*"
features = ["timeout"]

[dependencies.tower-http]
version = "*"
features = ["trace", "request-id"]

[dependencies.tracing]
version = "*"

[dependencies.tracing-attributes]
version = "*"

[dependencies.tracing-log]
version = "*"

[dependencies.tracing-opentelemetry]
version = "*"
optional = true

[dependencies.tracing-subscriber]
version = "*"
features = ["json", "env-filter"]

[dependencies.uuid]
version = "*"
features = [
    "v4",
    "serde",
]

[dependencies.bon]
version = "*"
