[package]
name = "packager"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "packager"
path = "src/main.rs"

[features]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tonic",
    "dep:tracing-opentelemetry",
    "tokio/tracing",
]
prometheus = [
    "dep:axum-prometheus",
]
tokio-console = [
    "dep:console-subscriber",
]

default = [
    "otel",
    "prometheus",
    "tokio-console",
]

[profile.dev]
opt-level = 0
lto = "off"

[dependencies.paste]
version = "*"
default-features = false

[dependencies.rust_decimal]
version = "*"
default-features = false

[dependencies.async-trait]
version = "*"
default-features = false

[dependencies.axum]
version = "*"
default-features = false
features = [
    "form",
    "http2",
    "macros",
    "query",
    "tokio",
]

[dependencies.axum-prometheus]
version = "*"
default-features = false
features = [
    "prometheus",
]
optional = true

[dependencies.base64]
version = "*"
default-features = false

[dependencies.clap]
version = "*"
default-features = false
features = [
    "derive",
    "help",
    "std",
]

[dependencies.console-subscriber]
version = "*"
default-features = false
optional = true

[dependencies.futures]
version = "*"
default-features = false

[dependencies.http]
version = "*"
default-features = false

[dependencies.hyper]
version = "*"
default-features = false
features = [
    "full",
]

[dependencies.log]
version = "*"
default-features = false

[dependencies.maud]
version = "*"
default-features = false
features = [
    "axum",
]

[dependencies.metrics]
version = "*"
default-features = false

[dependencies.opentelemetry]
version = "*"
default-features = false
optional = true

[dependencies.opentelemetry-otlp]
version = "*"
default-features = false
features = [
    "grpc-tonic",
    "trace",
]
optional = true

[dependencies.opentelemetry_sdk]
version = "*"
default-features = false
features = [
    "rt-tokio",
    "trace",
]
optional = true

[dependencies.serde]
version = "*"
default-features = false
features = [
    "derive",
]

[dependencies.serde_variant]
version = "*"
default-features = false

[dependencies.sha2]
version = "*"
default-features = false

[dependencies.sqlx]
version = "*"
default-features = false
features = [
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "time",
    "uuid",
]

[dependencies.time]
version = "*"
default-features = false
features = [
    "serde",
]

[dependencies.tokio]
version = "*"
default-features = false
features = [
    "macros",
    "rt-multi-thread",
]

[dependencies.tonic]
version = "*"
default-features = false
optional = true

[dependencies.tower]
version = "*"
default-features = false
features = [
    "timeout",
]

[dependencies.tower-http]
version = "*"
default-features = false
features = [
    "request-id",
    "trace",
]

[dependencies.tracing]
version = "*"
default-features = false

[dependencies.tracing-attributes]
version = "*"
default-features = false

[dependencies.tracing-log]
version = "*"
features = [
    "log-tracer",
    "std",
]
default-features = false

[dependencies.tracing-opentelemetry]
version = "*"
default-features = false
optional = true

[dependencies.tracing-subscriber]
version = "*"
default-features = false
features = [
    "ansi",
    "env-filter",
    "json",
]

[dependencies.uuid]
version = "*"
default-features = false
features = [
    "serde",
    "v4",
]

[dependencies.bon]
version = "*"
default-features = false

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
nursery = { priority = -1, level = "warn" }

missing_errors_doc = "allow"
option_if_let_else = "allow"
missing_const_for_fn = "allow"
missing_panics_doc = "allow"
used_underscore_binding = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
cognitive_complexity = "allow"
