[package]
name = "packager-api"
version = "0.1.0"
authors = [
    "Hannes Körber <hannes@hkoerber.de>"
]
edition = "2021"
readme = "README.md"
repository = "https://github.com/hkoerber/packager/"
license = "AGPL-3.0-only"

publish = false

[lib]
name = "packager"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version  = "0.8", features = ["serde", "v4"] }

