[package]
name = "packager-database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies.sqlx]
workspace = true

[dependencies.base64]
version = "*"
default-features = false

[dependencies.sha2]
version = "*"
default-features = false

[dependencies.url]
version = "*"
default-features = false

[dependencies.tracing]
version = "*"
default-features = false

[dependencies.metrics]
version = "*"
default-features = false

[dependencies.time]
workspace = true

[dependencies.uuid]
workspace = true
