[package]
name = "packager"
version = "0.1.0"
edition = "2021"

[dependencies.axum]
version = "0.6.18"
features = ["headers"]

[dependencies.tokio]
version = "1.28.0"
features = ["full"]

[dependencies.hyper]
version = "0.14.26"
features = ["full"]

[dependencies.tower]
version = "0.4.13"

[dependencies.tracing]
version = "0.1.37"

[dependencies.tracing-subscriber]
version = "0.3"

[dependencies.maud]
version = "0.25"
features = [
  "axum",
]

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",
    "serde",
]

[dependencies.sqlx]
version = "0.6.3"
features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "time",
  "offline",
  "migrate",
]

[dependencies.futures]
version = "0.3.28"

[dependencies.time]
version = "0.3.21"
features = ["serde"]

[dependencies.serde]
version = "1.0.162"
features = ["derive"]

[dependencies.serde_variant]
version = "0.1"
