[package]
name = "packager"
version = "0.1.0"
edition = "2021"

[dependencies.clap]
version = "4.3.0"
features = ["derive"]

[dependencies.axum]
version = "0.6"
features = ["headers"]

[dependencies.tokio]
version = "1.28"
features = ["full"]

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.tower]
version = "0.4"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"

[dependencies.maud]
version = "0.25"
features = [
  "axum",
]

[dependencies.uuid]
version = "1.3"
features = [
    "v4",
    "serde",
]

[dependencies.sqlx]
version = "0.6"
features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "time",
  "offline",
  "migrate",
]

[dependencies.futures]
version = "0.3"

[dependencies.time]
version = "0.3"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_variant]
version = "0.1"
