[package]
name = "packager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "packager"
path = "src/main.rs"

[features]
jaeger = []
prometheus = []
tokio-console = []

default = ["jaeger", "prometheus", "tokio-console"]

[profile.dev]
opt-level = 0
lto = "off"

[dependencies.opentelemetry]
version = "0.20"

[dependencies.tracing-opentelemetry]
version = "0.21"

[dependencies.tracing-log]
version = "0.1"

[dependencies.opentelemetry-jaeger]
version = "0.19"
features = ["rt-tokio"]

[dependencies.http]
version = "0.2"

[dependencies.log]
version = "0.4"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.axum]
version = "0.6"
features = ["headers"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "tracing"]

[dependencies.console-subscriber]
version = "0.1"

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.tower]
version = "0.4"

[dependencies.tower-http]
version = "0.4"
features = ["trace", "request-id"]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-attributes]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["json", "env-filter"]

[dependencies.maud]
version = "0.25"
features = [
  "axum",
]

[dependencies.uuid]
version = "1"
features = [
    "v4",
    "serde",
]

[dependencies.sqlx]
version = "0.7"
#path = "./vendor/sqlx"
features = [
  "runtime-tokio-rustls",
  # "offline",
  "sqlite",
  "macros",
  "time",
  "migrate",
]

[dependencies.futures]
version = "0.3"

[dependencies.time]
version = "0.3"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_variant]
version = "0.1"

[dependencies.axum-prometheus]
version = "0.4"

[dependencies.metrics]
version = "0.21"

[dependencies.sha2]
version = "0.10"

[dependencies.base64]
version = "0.21"
